--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ sqlx = { version = "0.7.4", optional = true }
 log = "0.4.21"
 redis = { version = "0.25.3", optional = true }
 mongodb = { version = "2.8.2", optional = true }
+sled = { version = "0.34.7", optional = true}
 
 [features]
 postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
@@ -28,5 +29,5 @@ mysql = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
 sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]  # Add this line
 redis = ["dep:redis"]
 mongo = ["mongodb"]
-full = ["postgres", "mysql", "sqlite", "redis", "mongo"]
+full = ["postgres", "mysql", "sqlite", "redis", "mongo", "sled"]
 default = []
